--- a/stub/index.html
+++ b/stub/index.html
@@ -26,7 +26,7 @@
         <div class="postButtons">
 
             <input  class="middleButtons" id="btn1" type="button" onclick="Allposts()" value="All Posts">
-            <input  class="middleButtons" id="btn1" type="button" onclick="createnew()"  value="Create Post">
+            <input  class="middleButtons" id="btn1" type="button" onclick="createpost()"  value="Create Post">
 
         </div>
     </div>
@@ -75,16 +75,23 @@
     	
 
     </div>
-
-    <div>
-
-    	<!-- Insert code for Create Post modal here -->
-
+<!-- Below code is for Create Post modal  -->
+    <div class=modal id="createnew" >
+        <form class="modal-content2">
+                <span onclick="closec()" class="close">&times;</span>
+                <h1>Create Your Post</h1>
+                <hr>
+                <label>Title:</label><br>
+                <input type="text" id="ac"><br>
+                <label>Content:</label><br>
+                <textarea rows=20 cols=110 style="background-color: #d9d9d9 "></textarea>
+                <button type="submit" class="crbtn">Create</button>
+        </form>
     </div>
 
-	<!-- Place all Javascript for header in this file -->
+	<!-- all Javascript for header are in this file -->
 	<script src="js\header.js"></script>
-	<!-- Place all Javascript for rest of the elements in this file -->
+	<!-- all Javascript for rest of the elements are in this file -->
     <script src="js\index.js"></script>
 
 </body>
